# plugin-scaffold

./: .gitignore  Main.hs  README.md  build.cfg  flake.nix  hie.yaml  plugin-scaffold.cabal
data/fixtures/: build.gradle.kts
data/fixtures/app/src/main/: AndroidManifest.xml
data/fixtures/app/src/main/assets/: README.md
data/templates/: README.md.mustache  settings.gradle.kts.mustache
data/templates/app/src/main/res/values/: strings.xml.mustache
fixtures/: build.gradle.kts  flake.nix
fixtures/app/: .gitignore
fixtures/gradle/wrapper/: gradle-wrapper.properties
nix/: default.nix
templates/: gradle.properties.mustache  settings.gradle.kts.mustache
templates/app/: build.gradle.kts.mustache
templates/app/src/main/res/xml/: plugin.xml.mustache
